--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,8 @@ DB_PASSWORD = "postgres"
 DB_PORT = "5432"
 
 
-# HOST=local.zenv.test
-# PORT=3000
+#  MQTT broker config
+
+MQTT_BROKER = "127.0.0.1"  
+MQTT_PORT = 9001  # Use WebSocket port
+MQTT_TOPIC = "/RFID/access_control_data/product_id"  
