--- a/backend/.env
+++ b/backend/.env
@@ -8,5 +8,5 @@ DB_PORT = "5432"
 #  MQTT broker config
 
 MQTT_BROKER = "127.0.0.1"  
-MQTT_PORT = 9001  # Use WebSocket port
+MQTT_PORT = 9001  
 MQTT_TOPIC = "/RFID/access_control_data/product_id"  
