--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "4.9.5",
+
     "react-avatar": "^5.0.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.9",
@@ -28,6 +30,7 @@
     "react-datepicker": "^8.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+
     "react-grid-layout": "^1.5.1",
     "react-i18next": "^15.4.1",
     "react-resizable": "^3.0.5",
@@ -62,3 +65,6 @@
     ]
   }
 }
+
+
+
